got really stuck so had to resort to Wittcode's video on building the google homepage. Actually helped. I'm trying to continue on the basis of using what I've already got and then correcting it using his video so far I've centered the top and bottom navbar items using a flex box although I'm assuming when I see the full video there will be more work required on the bottom navbar

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body{
+    margin:0;
     font-family: Arial, sans-serif;
     font-size: 14px;
 }
@@ -15,12 +16,17 @@ ul{
 li a{
     color:#585555;
     text-decoration: none;
+    margin:5px;
 }
 
 header {
     display:flex;
     justify-content: space-between;
     top:0;
+}
+.header-nav{
+    display:flex;
+    align-items:center;
 }
 
 .logo {
@@ -34,6 +40,7 @@ width:50%;
 }
 
 .search_bar{
+    max-height:5%;
     position:relative;
     background-color: transparent;
     left:30%;
@@ -53,13 +60,24 @@ width:50%;
     border-color:lightgrey;
 
 }
-.Button{
+.button1{
     position:absolute;
-    left:30%;
+    left:220px;
+    top:250px;
     width:auto;
-    display:flex;
-
-    justify-content: space-between;
+    height:34px;
+}
+.button2{
+    position:absolute;
+    left:340px;
+    top:250px;
+    width:auto;
+    height:34px;
+}
+#spyglass{
+    position:absolute;
+    left:32%;
+    top:32%;
 }
 
 footer {
@@ -70,4 +88,8 @@ footer {
     width: 100vw;
     padding:2px;
     background-color: #f2f2f2;
+}
+.footer-nav{
+    display:flex;
+    align-items:center;
 }
